--- a/index.html
+++ b/index.html
@@ -155,8 +155,10 @@
 <div style="height: 100px; overflow: auto;">
 </ul>
 <ul>
+</ul>
+<ul>
 	<li>
-		[01/2026] One paper has been accepted by <a href="https://aacrjournals.org/clincancerres"> Clinical Cancer Research</a>，an official journal of American Association for Cancer Research (AACR), titled "Non-invasive Imaging Assessment of Tertiary Lymphoid Structures and Immunotherapy Response in Gastric Cancer: A Multicenter Study." <br> 
+		[01/2026] One paper has been accepted by <a href="https://aacrjournals.org/clincancerres"> Clinical Cancer Research，</a> an official journal of American Association for Cancer Research (AACR), titled "Non-invasive Imaging Assessment of Tertiary Lymphoid Structures and Immunotherapy Response in Gastric Cancer: A Multicenter Study." <br> 
 	</li>
 </ul>
 <ul>
@@ -175,7 +177,7 @@
 </ul>
 <ul>
 	<li>
-		[9/2025] Ranked in the Top 2% of Scientists Worldwide on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/8">Stanford List 2025.</a><br>
+		[9/2025] Ranked in the Top 2% of Scientists Worldwide on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/8">Stanford List 2025.</a> <br>
 	</li>
 </ul>
 <ul>
