--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </ul>
 <ul>
 	<li>
-		[01/2026] One paper has been accepted by <a href="https://aacrjournals.org/clincancerres"> Clinical Cancer Research，</a> an official journal of American Association for Cancer Research (AACR), entitled "Non-invasive Imaging Assessment of Tertiary Lymphoid Structures and Immunotherapy Response." <br> 
+		[01/2026] One paper has been accepted by <a href="https://aacrjournals.org/clincancerres"> Clinical Cancer Research,</a> an official journal of American Association for Cancer Research (AACR), entitled "Non-invasive Imaging Assessment of Tertiary Lymphoid Structures and Immunotherapy Response." <br> 
 	</li>
 </ul>
 <ul>
