--- a/index.html
+++ b/index.html
@@ -158,10 +158,15 @@
 </ul>
 <ul>
 	<li>
-		[01/2026] One paper has been accepted by <a href="https://aacrjournals.org/clincancerres"> Clinical Cancer Research,</a> an official journal of American Association for Cancer Research (AACR).<br> 
+		[02/2026] One paper has been accepted by <a href="https://www.sciencedirect.com/journal/journal-of-advanced-research"> Journal of Advanced Research (IF: 13).<br> 
 	</li>
 </ul>
 <ul>
+</ul>
+<ul>
+	<li>
+		[01/2026] One paper has been accepted by <a href="https://aacrjournals.org/clincancerres"> Clinical Cancer Research,</a> an official journal of American Association for Cancer Research (AACR).<br>  
+	</li>
 </ul>
 <ul>
 	<li>
