--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </ul>
 <ul>
 	<li>
-		[02/2026] One paper has been accepted by <a href="https://www.sciencedirect.com/journal/journal-of-advanced-research"> Journal of Advanced Research (IF: 13).<br> 
+		[02/2026] One paper has been accepted by <a href="https://www.sciencedirect.com/journal/journal-of-advanced-research"> Journal of Advanced Research </a> (IF: 13).<br> 
 	</li>
 </ul>
 <ul>
