--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 </ul>
 <ul>
 	<li>
-		[01/2026] One paper has been accepted by <a href="https://aacrjournals.org/clincancerres"> Clinical Cancer Research,</a> an official journal of American Association for Cancer Research (AACR); titled "<https://aacrjournals.org/clincancerres/article/doi/10.1158/1078-0432.CCR-25-3669/774202/Non-invasive-Imaging-Assessment-of-Tertiary"> Non-invasive Imaging Assessment of Tertiary Lymphoid Structures and Immunotherapy Response in Gastric Cancer</a>".<br>  
+		[01/2026] One paper has been accepted by <a href="https://aacrjournals.org/clincancerres"> Clinical Cancer Research,</a> an official journal of American Association for Cancer Research (AACR); titled "<a href="https://aacrjournals.org/clincancerres/article/doi/10.1158/1078-0432.CCR-25-3669/774202/Non-invasive-Imaging-Assessment-of-Tertiary"> Non-invasive Imaging Assessment of Tertiary Lymphoid Structures and Immunotherapy Response in Gastric Cancer</a>".<br>  
 	</li>
 </ul>
 <ul>
