--- a/index.html
+++ b/index.html
@@ -408,6 +408,17 @@
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 	</ul>
 -->
+	<p><font face="Arial" size="4"><b>2026</b></font></p>
+        <ul>
+	<li>
+		<a href="https://www.nature.com/articles/s41467-025-61349-1#additional-information"> Automated cell annotation and classification on histopathology for spatial biomarker discovery</a><br>
+		Zhe Li, Seyed Hossein Mirjahanmardi, Rasoul Sali, Feyisope Eweje, Matthew Gopaulchan, Leon Kloker, Xiaoming Zhang, Guoxin Li, <b>Yuming Jiang</b> & Ruijiang Li.<br>
+		<em>Nature Communications</em>, 2025. (Impact Factor: 15.7) </br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+-->
 	<p><font face="Arial" size="4"><b>2025</b></font></p>
         <ul>
 	<li>
