--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 	<li>
 		<a href="https://aacrjournals.org/clincancerres/article/doi/10.1158/1078-0432.CCR-25-3669/774202"> Non-invasive Imaging Assessment of Tertiary Lymphoid Structures and Immunotherapy Response in Gastric Cancer: A Multicenter Study</a><br>
 		Sun Z, Li Z, Ahmad MU, Zhu Y, Zhou Z, Zhou K, Wu L, Chen C, Yuan Q, Zhang T, Chen Y, Xie J, Feng W, Xu Y, Xiong W, Wang W, Li G, <b>Jiang Y</b>.<br>
-		<em>Clinical Cancer Research </em>, 2026. </br>
+		<em>Clinical Cancer Research, an official journal of American Association for Cancer Research (AACR)</em>, 2026. </br>
 	</li>
 	</ul>
 	<ul>
@@ -421,7 +421,7 @@
 		 
 		<a href="https://www.sciencedirect.com/science/article/pii/S2090123226001049"> Noninvasive imaging-based assessment of tumor-associated neutrophils for prognosis and immunotherapy response in gastric cancer: a multicenter study</a><br>
 		Zheng W, Sun Z, Wang W, Han JE, Islam MT, Li W, Yuan Q, Chen C, Xi S, Li Z, Wang X, Wu L, Xiong W, Chen T, Li G, Li Z, Yu J, <b>Jiang Y</b>.<br>
-		<em>Journal of Advanced Research </em>, 2026. </br>
+		<em>Journal of Advanced Research</em>, 2026. </br>
 	</li>
 	</ul>
 
