--- a/index.html
+++ b/index.html
@@ -443,14 +443,14 @@
 	<ul>
 	<li>
 		<a href="https://www.cell.com/cell-reports-medicine/fulltext/S2666-3791(25)00315-5"> TME-guided deep learning predicts chemotherapy and immunotherapy response in gastric cancer with attention-enhanced residual Swin Transformer</a><br>
-		Shentian Sang, Zepang Sun, Wenbo Zheng, Wei Wang, Md Tauhidul Islam, Yijun Chen, Qingyu Yuan, Chuanli Cheng, Sujuan Xi, Zhen Han, Taojun Zhang, Lin Wu, Wencheng Li, Jingjing Xie, Wanying Feng, Yan Chen, Wenjun Xiong, Jiang Yu, Guoxin Li, Zhenhui Li, and <b>Yuming Jiang</b>.<br>
+		Sang S, Sun Z, Zheng W, Wang W, Islam MT, Chen Y, Yuan Q, Cheng C, Xi S, Han Z, Zhang T, Wu L, Li W, Xie J, Feng W, Chen Y, Xiong W, Yu J, Li G, Li Z, and <b>Jiang Y</b>.<br>
 		<em>Cell Reports Medicine</em>, 2025. (Impact Factor: 10.6)</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/pii/S0304383525004999?via%3Dihub"> Multimodal radiopathomics signature for prediction of response to immunotherapy-based combination therapy in gastric cancer using interpretable machine learning</a><br>
-		Weicai Huang, Xiaoyan Wang, Rou Zhong, Zhe Li, Kangneng Zhou, Qing Lyu, James Edward Han, Tao Chen, Md Tauhidul Islam, Qingyu Yuan, M. Usman Ahmad, Sitong Chen, Fan Yang, Zhijun Xu, Guoxin Li, and <b>Yuming Jiang</b>.<br>
+		Huang W, Wang X, Zhong R, Li Z, Zhou K, Lyu Q, Han JE, Chen T, Islam MT, Yuan Q, Ahmad MU, Chen S, Yang F, Xu Z, Li G, and <b>Jiang Y</b>.<br>
 		<em>Cancer Letters</em>, 2025.(Impact Factor: 10.1) </br>
 	</li>
 	</ul>
