--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 	<ul>
 	<li>
 	        <a href="https://journals.lww.com/ctg/fulltext/9900/noninvasive_assessment_of_vascular_endothelial.349.aspx"> Noninvasive Assessment of Vascular Endothelial Growth Factor and Prognosis in Gastric Cancer Through Radiomic Features</a><br>
-		Hao Feng, Kangneng Zhou, Qingyu Yuan, Zhiwei Liu, Taojun Zhang, Hao Chen, Benjamin Xu, Zepang Sun, Zhen Han, Hao Liu, Shitong Yu, Tao Chen, Guoxin Li, Wenlan Zhou, Jiang Yu, Weicai Huang, and <b>Yuming Jiang</b>.<br>
+		Feng H, Zhou K, Yuan Q, Liu Z, Zhang T, Chen H, Xu B, Sun Z, Han Z, Liu H, Yu S, Chen T, Li G, Zhou W, Yu J, Huang W, and <b>Jiang Y</b>.<br>
 		<em>Clinical and Translational Gastroenterology</em>, 2025. (Impact Factor: 4.49)</br>
 	</li>
 	</ul>
@@ -545,7 +545,7 @@
 	<ul>
 	<li>
 		<a href="https://jitc.bmj.com/content/12/5/e008927?rss=1" target="_blank">Development and interpretation of a pathomics-driven ensemble model for predicting the response to immunotherapy in gastric cancer</a><br>
-		Zhen Han, Zhicheng Zhang, Xianqi Yang, Zhe Li, Shengtian Sang, Md Tauhidul Islam, Alyssa A Guo, Zihan Li, Xiaoyan Wang, Jing Wang, Taojun Zhang, Zepang Sun, Lequan Yu, Wei Wang, Wenjun Xiong, Guoxin Li, and <b>Yuming Jiang</b>.<br>
+		Han Z, Zhang Z, Yang X, Li Z, Sang S, Islam MT, Guo AA, Li Z, Wang X, Wang J, Zhang T, Sun Z, Yu L, Wang W, Xiong W, Li G, and <b>Jiang Y</b>.<br>
 		<em>The Journal for ImmunoTherapy of Cancer (JITC) </em>, 2024. (Impact Factor: 10.9)</br>
 	</li>
 	</ul>	
@@ -553,7 +553,7 @@
 	<li>
 	
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S0895611124000132?via%3Dihub" target="_blank">QUIZ: An arbitrary volumetric point matching method for medical imageregistration</a><br>
-		Lin Liu, Xinxin Fan, Haoyang Liu, Chulong Zhang, Weibin Kong, Jingjing Dai, <b>Yuming Jiang</b>, Yaoqin Xie, Xiaokun Liang.<br>
+		Liu L, Fan X, Liu H, Zhang C, Kong W, Dai J, <b>Jiang Y</b>, Xie Y, Liang X.<br>
 		<em>Computerized Medical Imaging and Graphics</em>, 2024.</br>
 	</li>
 	</ul>	
