--- a/index.html
+++ b/index.html
@@ -424,6 +424,14 @@
 		<em>Journal of Advanced Research</em>, 2026. </br>
 	</li>
 	</ul>
+	<ul>
+	<li>
+		 
+		<a href="https://openreview.net/forum?id=oxgcPoDkNv"> Bridging Radiology and Pathology Foundation Models via Concept-Based Multimodal Co-Adaptation</a><br>
+		Chen Y, Huang Y, Wang F, Yeung M, <b>Jiang Y</b>, Wang S, Yu L.<br>
+		<em>International Conference on Learning Representations (ICLR)</em>, 2026. </br>
+	</li>
+	</ul>
 
 	<p><font face="Arial" size="4"><b>2025</b></font></p>
         <ul>
